@@ -9,12 +9,12 @@
 		<setting id="dtChannelType" label="Select channels category" type="enum" default="0" lvalues="30001|30002|30003"/>
 		<setting id="dtForceRefresh" label="Force TV Shows data refresh next time when add-on starts" type="bool" default="false" />
 	</category>
-	<category label="Live">
-<!-- hide WatchSunTV.com streams until it is not working	
+<!--	<category label="Live">
+ hide WatchSunTV.com streams until it is not working	
 		<setting label="[B]WatchSunTV.com[/B]" type="lsep" />
 		<setting id="wst_username" label="30010" type="text" default=""/>
 		<setting id="wst_password" label="30011" type="text" option="hidden" default=""/>
-	 -->	
+		
 		<setting label="[B]DesiTV[/B]STREAMS.com" type="lsep" />
 		<setting id="dts_username" label="30010" type="text" default=""/>
 		<setting id="dts_password" label="30011" type="text" option="hidden" default=""/>
@@ -26,6 +26,7 @@
 		<setting id="mnt_server" label="Choose live streaming server" type="enum" default="0" lvalues="30012|30013|30014"/>
 		
 	</category>
+	 -->
 	<category label="Video">
 		<setting label="[B]Playback[/B]" type="lsep" />
 		<setting id="playbackqual" label="Select preferred playback video quality" type="enum" default="0" lvalues="30021|30022|30023"/>
