@@ -1,3 +1,6 @@
+[B]Version v0.4.0[/B]
+- Updated to newer version of PlayIt to support valid_url functionality of URLResolver.
+
 [B]Version v0.3.8 - v0.3.9[/B]
 - Added Google Analytics parameters.
 
