@@ -1,3 +1,6 @@
+[B]Version v1.6.8[/B]
+- Straighten live category and removed not working links. 
+
 [B]Version v1.6.6 - 1.6.7[/B]
 - Added Google Analytics parameters.
 
